--- a/client/main.css
+++ b/client/main.css
@@ -92,3 +92,25 @@ body {
   color: #333;
   margin-left: 10px;
 }
+
+.nav-link {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  gap: 20px; /* space-x-5 equivalent */
+  width: 100%;
+  padding: 8px 16px; /* px-4 py-2 equivalent */
+  margin-bottom: 12px; /* mb-3 equivalent */
+  border-radius: 8px; /* rounded-lg equivalent */
+  background-color: var(--bg-darker-color); /* adjust your color variable as needed */
+  color: grey; /* default text color */
+  font-weight: bold; /* font-semibold equivalent */
+  text-decoration: none; /* removes underline */
+  box-shadow: var(--shadow-nav); /* adjust your shadow variable as needed */
+}
+
+.nav-link:hover, .nav-link:focus, .nav-link.active {
+  color: white; /* text color on hover and active */
+  box-shadow: var(--hover-shadow-nav-inner); /* adjust your hover shadow variable as needed */
+  text-decoration: none; /* ensures no underline on hover */
+}
